# Conversation-Assistant

./: .dockerignore  .gitignore  Dockerfile  MCP_ARCHITECTURE_GUIDE.md  README.md  SYSTEM_ARCHITECTURE.md  docker-compose.yml  ppt.html  pyproject.toml  run_ai_control.py  run_ai_control_mcp.py
.claude/: settings.local.json
src/api/: main.py
src/api/routes/: conversations.py  health.py  users.py  webhooks.py
src/client/: whatsapp_ai_control.py  whatsapp_ai_control_mcp.py  whatsapp_client.py  whatsapp_interactive.py
src/mcp/: client.py  server.py  whatsapp_tools.py
src/models/: conversation.py  message.py  user.py
src/services/: database.py  gemini.py
src/utils/: config.py
